# falcao-launcher

./: .agent.md  .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: health-checks.yml  security-scan.yml
docs/superpowers/: CHECKPOINT-vm-monitor.md  SESSION-RECAP-2026-05-06.md
public/: .agent.md
scripts/: apply-vm-migrations.sh  deploy-monitor-agent.sh  probe-endpoints.sh  push-health-results.sh  push-vulnerabilities.sh  scan-dependabot.sh
src/: .agent.md  App.css  App.tsx  types.ts
src-tauri/: .agent.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: .agent.md
src-tauri/crates/: .agent.md
src-tauri/crates/monitor-agent/: .agent.md  Cargo.toml
src-tauri/crates/monitor-agent/src/: buffer.rs  db.rs  main.rs
src-tauri/crates/monitor-agent/src/collectors/: .agent.md  container.rs  gh_actions.rs  hetzner.rs  mod.rs  vercel.rs  vercel_usage.rs  vm.rs
src-tauri/crates/monitor-agent/tests/fixtures/: gh_actions_sample.json  vercel_usage_sample.json
src-tauri/crates/monitor-shared/: .agent.md  Cargo.toml
src-tauri/crates/monitor-shared/src/: lib.rs
src-tauri/icons/: .agent.md  icon.icns
src-tauri/src/: .agent.md  claude.rs  config.rs  external.rs  icon.rs  lib.rs  main.rs  netstat.rs  ports.rs  process.rs  scanner.rs  skills.rs
src-tauri/src/monitor/: .agent.md  commands.rs  costs.rs  mod.rs  queries.rs  security.rs  stacks.rs  tunnel.rs
src-tauri/tests/fixtures/: sample_session.jsonl
src/assets/: .agent.md
src/components/: .agent.md  AddProjectModal.tsx  AnalysisChartSlot.tsx  AnalysisGrid.tsx  AnalysisLayoutPicker.tsx  AnalysisLogsPanel.tsx  AnalysisPage.tsx  Checkbox.tsx  ClaudeChip.tsx  ClaudeInvestigationModal.tsx  ClaudeTab.tsx  CostChip.tsx  CostHistoryChart.tsx  CostServiceCard.tsx  CostTab.tsx  CostUsageBar.tsx  DrawerLoadingOverlay.tsx  HealthCheckRow.tsx  HealthChecksSection.tsx  Loading.tsx  LogsDrawer.tsx  MetricPicker.tsx  ProjectCard.tsx  ProjectConfigModal.tsx  ProjectDetailDrawer.tsx  ProjectListItem.tsx  SecurityChip.tsx  SecurityScanProgress.tsx  SecurityTab.tsx  SessionsList.tsx  SettingsMenu.tsx  SkillsView.tsx  SpawnClaudeButton.tsx  StackCard.tsx  StackDrawer.tsx  StackGrid.tsx  SystemIcon.tsx  Tabs.tsx  TimeWindowSelector.tsx  TokensChart.tsx  (+9 more)
src/lib/: .agent.md  claudeCost.ts  cost.ts  format.ts  metrics.ts  monitor.ts  resolveTargetDir.ts  serializeAnalysis.ts  serializeSecurity.ts  useAnalysisContext.ts  useAnalysisLayouts.ts
src/styles/: .agent.md  animations.ts
(+30 files in other folders)
