[workspace]
members = [
  ".",
  "crates/monitor-shared",
  "crates/monitor-agent",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
russh = "0.45"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[package]
name = "falcao-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "falcao_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "rt", "time"] }
libc = "0.2"
regex = "1"
once_cell = "1"
base64 = "0.22"
freedesktop-icons = "0.4.0"
procfs = "0.17"
notify = "6"
chrono = { workspace = true }
russh = { workspace = true }
russh-keys = "0.45"
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
monitor-shared = { path = "crates/monitor-shared" }
urlencoding = "2"
